# HSE-OpenCL-Webinar

./: .clang-format  CMakeLists.txt  README.md  main_color2gray.cpp  main_vector.cpp
common/: common_functions.cpp  common_functions.h
implementations/: color2gray.cpp  color2gray.h  vector_add.cpp  vector_add.h
kernels/: color2gray.cl
